<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="return_to_main_menu">Return to main menu</string>
    <string name="return_to_previous">Return to previous page</string>
    <string name="title_activity_add_patient">AddPatientActivity</string>
    <string name="headerAddPatient">Add a patient</string>
    <string name="name">Name</string>
    <string name="year">YYYY</string>
    <string name="month">MM</string>
    <string name="day">DD</string>
    <string name="healthCardNum">Health card number</string>
    <string name="submit">Add</string>
    <string name="app_name">Triage</string>
    <string name="action_settings">Settings</string>
    <string name="login">Please enter your login information:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_text">Log in</string>
    <string name="title_activity_launch">Launch</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_prescription">Add prescription</string>
    <string name="invalid_message">The username and/or password you have entered is invalid. You may try again.</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="welcome">Update vital signs here</string>
    <string name="search">Search</string>
    <string name="adding">Add patient</string>
    <string name="health_card_num">Health card number</string>
    <string name="title_activity_not_found">NotFoundActivity</string>
    <string name="not_found_patient">The patient has not been found. You may try again.</string>
    <string name="postTriageButton">Display post-triage patients</string>
    <string name="intriageButton">Display by arrival time</string>
    <string name="urgencyButton">Display by urgency</string>
    <string name="title_activity_in_triage">InTriageActivity</string>
    <string name="title_activity_post_triage">PostTriageActivity</string>
    <string name="update">Update vital signs</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="temperature">Temperature (degrees Celsius)</string>
    <string name="blood_pressure">Blood pressure (systolic)</string>
    <string name="heart_rate">Heart rate (bpm)</string>
    <string name="update_signs">Update</string>
    <string name="out_of_hospital">This patient is not in triage.</string>
    <string name="title_activity_add_error">AddErrorActivity</string>
    <string name="AddError">This patient is already in triage or the input is invalid.</string>
    <string name="welcome_user">Welcome</string>
    <string name="title_activity_add_success">AddSuccessActivity</string>
    <string name="addSuccessMessage">The patient has been added successfully.</string>
    <string name="title_activity_display_intriage">DisplayIntriageActivity</string>
    <string name="displayIntriage">Patients in triage:</string>
    <string name="displayIn" />
    <string name="title_activity_display_post_triage">DisplayPostTriageActivity</string>
    <string name="displayPostTriage">Post-triage patients:</string>
    <string name="displayPo" />
    <string name="patient">Patient:</string>
    <string name="title_activity_update_success">UpdateSuccessActivity</string>
    <string name="updatesuccess">The vital signs have been added successfully.</string>
    <string name="title_activity_update_error">UpdateErrorActivity</string>
    <string name="update_error">Please enter valid vital signs.</string>
    <string name="title_activity_main_manu">MainManuActivity</string>
    <string name="title_activity_main_menu_physician">MainMenuPhysicianActivity</string>
    <string name="title_activity_seen_by_doctor">SeenByDoctorActivity</string>
    <string name="admit">Admit patient</string>
    <string name="title_activity_in_triage_physician_activiy">InTriagePhysicianActiviy</string>
    <string name="title_activity_in_triage_physician">InTriagePhysicianActivity</string>
    <string name="updatePrescription">Update prescription</string>
    <string name="title_activity_prescription">PrescriptionActivity</string>
    <string name="update_prescription_here">Update prescription here</string>
    <string name="medication">Name for Medication</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_update_prescription_success">UpdatePrescriptionSuccessActivity</string>
    <string name="update_prescription_success">The new prescription has been added successfully.</string>
    <string name="title_activity_display_urgency">DisplayUrgencyActivity</string>
    <string name="display_urgency">List of patients from most to least urgent:</string>
    <string name="title_activity_post_triage_physician">PostTriagePhysicianActivity</string>
    <string name="title_activity_prescription_error">PrescriptionErrorActivity</string>
    <string name="prescription_error">Please enter valid prescription information.</string>
    <string name="logOutButton">Log out</string>
    <string name="title_activity_display_vital_record">DisplayVitalRecordActivity</string>
    <string name="title_activity_display_prescription">DisplayPrescriptionActivity</string>
    <string name="displayVitalRecord">Display vital record</string>
    <string name="displayPrescription">Display prescription</string>
    <color name="light_pink">#FFFFE4E1</color>
    <color name="pink">#FF000080</color>
    <color name="medium_blue">#FF4169E1</color>
    <color name="white">#FFFFFFFF</color>
    <color name="red">#FFDC143C</color>   
    <string name="Check">A check mark</string>
	<string name="Warning">A warning sign</string>
	 
</resources>
