<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_pink"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddPatientActivity" >


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pink"
        android:text="@string/headerAddPatient" />

      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

         <EditText
             android:id="@+id/name_field"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:hint="@string/name" />
	 </LinearLayout>
	 
	
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

     <EditText
         android:id="@+id/year_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:hint="@string/year" />
     
     <EditText
         android:id="@+id/month_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:hint="@string/month" />
     
     <EditText
         android:id="@+id/day_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:hint="@string/day" />
	 </LinearLayout>
	 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

     <EditText
         android:id="@+id/healthCardNum_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:hint="@string/healthCardNum" />
	 </LinearLayout>
	
     
     
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
   		 android:onClick="startAddPatient"
   		 android:textColor="@color/medium_blue"
         android:text="@string/submit"/>

         <Button
             android:id="@+id/button2"
             android:layout_width="192dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:background="@color/medium_blue"
             android:onClick="returnToMainMenu"
             android:text="@string/return_to_main_menu"
             android:textColor="@color/white" />
         
</LinearLayout>

