<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_pink"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InTriageActivity" >
    
    <TextView android:id="@+id/intriage_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pink"
        android:text="@string/patient" />
    
    <Button
	 	 android:layout_width="wrap_content"
	 	 android:layout_height="wrap_content"
	 	 android:text="@string/update"
	 	 android:textColor="@color/medium_blue"
	  	 android:onClick="update" />
    
    <Button
	 	 android:layout_width="wrap_content"
	 	 android:layout_height="wrap_content"
	 	 android:text="@string/admit"
	 	 android:textColor="@color/medium_blue"
	  	 android:onClick="seenByDoctor" />
    
    <Button
	 	 android:layout_width="wrap_content"
	 	 android:layout_height="wrap_content"
	 	 android:text="@string/displayVitalRecord"
	 	 android:textColor="@color/medium_blue"
	  	 android:onClick="displayVitalRecord" />
    
    <Button
	 	 android:layout_width="wrap_content"
	 	 android:layout_height="wrap_content"
	 	 android:text="@string/displayPrescription"
	 	 android:textColor="@color/medium_blue"
	  	 android:onClick="displayPrescription" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/medium_blue"
        android:onClick="returnToMainMenu"
        android:text="@string/return_to_main_menu"
        android:textColor="@color/white" />

</LinearLayout>

