<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_pink"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordsActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pink"
        android:text="@string/welcome" />
    
    <LinearLayout 
	 	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
	 	android:orientation="horizontal">
	 	
	 	<EditText android:id="@+id/temp_field"
	 		android:layout_weight="1"
	 		android:layout_width="0dp"
	 		android:layout_height="wrap_content"
	 		android:hint="@string/temperature" />
	
	</LinearLayout>
	<LinearLayout 
	 	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
	 	android:orientation="horizontal">
	 	
	 	<EditText android:id="@+id/bloodpressure_field"
	 		android:layout_weight="1"
	 		android:layout_width="0dp"
	 		android:layout_height="wrap_content"
	 		android:hint="@string/blood_pressure" />
	
	</LinearLayout>	
    <LinearLayout 
	 	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
	 	android:orientation="horizontal">
	 	
	 	<EditText android:id="@+id/heartrate_field"
	 		android:layout_weight="1"
	 		android:layout_width="0dp"
	 		android:layout_height="wrap_content"
	 		android:hint="@string/heart_rate" />
	 </LinearLayout>	
	 
	 

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateVitalSigns"
        android:textColor="@color/medium_blue"
       	android:text="@string/update_signs" />
    
        <Button
            android:id="@+id/button1"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="21dp"
            android:background="@color/medium_blue"
            android:onClick="returnToPrevious"
            android:text="@string/return_to_previous"
            android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="18dp"
        android:background="@color/medium_blue"
        android:onClick="returnToMainMenu"
        android:text="@string/return_to_main_menu"
        android:textColor="@color/white" />

</LinearLayout>
