<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_pink"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuPhysicianActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pink"
        android:text="@string/welcome_user" />
    
    <LinearLayout 
	 	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
	 	android:orientation="horizontal">
	 	
	 	<EditText android:id="@+id/cardnumber_field"
	 		android:layout_weight="1"
	 		android:layout_width="0dp"
	 		android:layout_height="wrap_content"
	 		android:hint="@string/health_card_num" />

    	<Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="searchPatient"
        	android:textColor="@color/medium_blue"
       		android:text="@string/search" />
    	
    </LinearLayout>
    
    <Button
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:background="@color/medium_blue"
        android:onClick="logOut"
        android:text="@string/logOutButton"
        android:textColor="@color/white" />

</LinearLayout>
