<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_pink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateSuccessActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="18dp"
        android:background="@color/medium_blue"
        android:onClick="returnToMainMenu"
        android:text="@string/return_to_main_menu"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/update_success"
        android:layout_alignRight="@+id/update_success"
        android:layout_below="@+id/update_success"
        android:layout_marginRight="70dp"
        android:layout_marginTop="43dp"
        android:background="@color/medium_blue"
        android:onClick="returnToPrevious"
        android:text="@string/return_to_previous"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/update_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:textColor="@color/pink"
        android:text="@string/updatesuccess" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/update_success"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="165dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/check" />
    
</RelativeLayout>

